--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 </head>
 
-<body style="background-color: #f7f6f1;">
+<body>
     <div id="title">
         <p>sketch2math - convert any sketch to a single mathematical equation
         <br>
