--- a/index.html
+++ b/index.html
@@ -158,8 +158,17 @@
             el.style.display = "none";
         }
     }
-
-    
 </script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142526587-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-142526587-1');
+</script>
+
 
 </html>
