--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 
 </head>
 
-<body>
+<body style="background-color: #f7f6f1;">
     <div id="title">
         <p>sketch2math - convert any sketch to a single mathematical equation
         <br>
-        draw on the canvas below to get started - <a href="github.com/jtguibas">github</a></p>
+        draw on the canvas below to get started - <a href="https://github.com/jtguibas/sketch2math">github</a></p>
     </div>
 
     <div class="container">
