clear canvas button

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
         </div>
         <br>
         <button class="btn btn-secondary" onclick="showEquation()">show/hide equation </button>
+        <button class="btn btn-secondary" onclick="document.location.reload()">clear canvas</button>
         <br><br>
         <h6 id="katex" style='display: block;'></h6>
     </div>
