--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <canvas id="myCanvas" resize></canvas>
             </div>
             <div class="col-6">
-                <h6>Graph</h6>
+                <h6>Graph <a style="font-size: 8px">(If you zoom in enough, you'll see that they are, in fact, circles)</a></h6> 
                 <div id="calculator" style="width: 600px; height: 600px;"></div>
             </div>
         </div>
